# NPNTool

./: .gitignore  .travis.yml  README.md  TODO  nctlmodelchecker.cabal  npntool.cabal
src/: AlphaTrail.hs  Bisimilarity.hs  CTL.hs  Graphviz.hs  Liveness.hs  Main.hs  ModelChecker.hs  NCTL.hs  NPNet.hs  NodeMap.hs  OrdFunctor.hs  PTConstr.hs  PTTest.hs  Parser.hs  PetriNet.hs  StateSpace.hs
src/NPNTool/: AlphaTrail.hs  Bisimilarity.hs  CTL.hs  DFSM.hs  Graphviz.hs  Liveness.hs  ModelChecker.hs  NCTL.hs  NPNConstr.hs  NPNet.hs  NodeMap.hs  OrdFunctor.hs  PNAction.hs  PTConstr.hs  PetriNet.hs  StateSpace.hs  Unfoldings.hs  XMLReader.hs
startup/: Main.hs  Parser.hs
tests/: Drones.hs  Main.hs  Unfoldings.hs
tests/dining/: Main.aux  Main.hp  Main.hs  Main.prof  Main.ps  Makefile  NestedPhils.hs  main.html  report.html  report.tgz
