name:                npntool
version:             0.1.0.1
synopsis:            Modelling and analysis toolset for nested Petri nets
description:         Nested Petri nets is an extension of Petri net formalism with net tokens for modelling multi-agent distributed systems with complex structure. While having a number of interesting properties, NP-nets have been lacking tool support. NPNTool presents a way to define and model (nested) Petri nets in a modular way in addition to a number of algorithms for analysing them.
license:             BSD3
license-file:        LICENSE
author:              Daniil Frumin <difrumin@gmail.com>
maintainer:          Daniil Frumin <difrumin@gmail.com>
-- category:            
build-type:          Simple
cabal-version:       >=1.8

Library 
  Exposed-modules:     NPNTool.PetriNet,
                       NPNTool.CTL,
                       NPNTool.Unfoldings,
                       NPNTool.Bisimilarity,
                       NPNTool.AlphaTrail,
                       NPNTool.Liveness,
                       NPNTool.Graphviz,
                       NPNTool.NPNet,
                       NPNTool.PTConstr,
                       NPNTool.NPNConstr,
                       NPNTool.XMLReader,
                       NPNTool.StateSpace,
                       NPNTool.NodeMap,
                       NPNTool.DFSM       
  hs-source-dirs:      src/   
  other-modules:       NPNTool.NCTL,
                       NPNTool.ModelChecker
                       
  build-depends:       base >=4.5.0,
                       fgl >=5.4.2.0,
                       mtl >=2.1.0,
                       transformers >=0.3,
                       containers >=0.5,
                       multiset ==0.2.2,
                       text >=0.11.0,
                       hxt >=9.3.0,
                       HUnit,
                       random ==1.0.*
                       

executable npnlive
  main-is:             Main.hs
  hs-source-dirs:      startup/
  build-depends:       base >=4.5.0,
                       multiset ==0.2.2,    
                       containers >=0.5,
                       transformers >=0.3,
                       mtl ==2.1.*,
                       npntool

Test-Suite general-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/
  main-is:             Main.hs
  build-depends:       base >=4.5.0,
                       multiset ==0.2.2,    
                       containers >=0.5,
                       npntool,
                       mtl,
                       HUnit ==1.2.5.*

